--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,10 @@
 .bg-color-three-reasons {
     background-color: white;
 }
+.bg-color-contact{
+   background-color: white;
+     }
+
 .bg-color-personal-info{
     background-color: #f4f4f4;
 }
@@ -336,4 +340,37 @@ footer {
 
 .history-items {
   
+}
+
+/*---------------------------------Contact Form */
+
+.contact-heading {
+    font-family: "Exo", sans-serif;
+    font-weight: 300;
+    margin-top:25px;
+    margin-bottom: 20px;
+}
+
+.center-form {
+    padding-top: 10px;
+    margin: 0 auto;
+    max-width: 70%;
+}
+
+button[type="submit"] {
+    margin-top: 15px;
+    margin-bottom: 20px;
+    color: #fafafa;
+    background-color: #e84610;
+}
+
+/*---------------------------------Media Queries */
+
+@media(min-width:992px) {
+    .center-form {
+    padding-top: 30px;
+    min-height: 240px;
+    margin: 0 auto;
+    max-width: 50%;
+}
 }
